<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_notes"
        android:title="@string/delete_main_menu"
        app:showAsAction="never"/>
    <item android:id="@+id/sort_notes"
        android:title="@string/sort_main_menu"
        app:showAsAction="never">
        <menu>
            <item android:id = "@+id/sort_by_date"
                  android:title="@string/sort_by_date" />

            <item android:id = "@+id/sort_by_color"
                android:title="@string/sort_by_color" />

            <item android:id = "@+id/show_shared_notes"
                android:title="@string/show_shared_notes" />
        </menu>
    </item>

    <item
        android:id="@+id/search_note"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_notes"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
</menu>