<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/purple_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:text="@string/purple" />

        <Button
            android:id="@+id/green_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:text="@string/green" />

        <Button
            android:id="@+id/blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:text="@string/blue" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/orange_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_orange"
            android:text="@string/orange" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:text="@string/yellow" />

        <Button
            android:id="@+id/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_red"
            android:text="@string/red" />

        <Button
            android:id="@+id/white_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/white" />
    </TableRow>

</TableLayout>